--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2 class="hero-subtitle">Aerospace Engineering Student @ IIT Madras</h2>
                 <p class="hero-description">
                     Curious Mind and a Passionate Student. 
-                    Love Physics and Maths as well as competitive Coding.
+                    Loves Physics and Maths as well as Game Development.
                 </p>
                 <div class="social-links">
                     <a href="https://linkedin.com/in/shaurya-gupta-799b91347" class="social-link" target="_blank">
