Minor test again

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1 class="hero-title">Shaurya Gupta</h1>
                 <h2 class="hero-subtitle">Aerospace Engineering Student @ IIT Madras</h2>
                 <p class="hero-description">
-                    Curious Mind and a Passionate Student. 
+                    A curious Mind and a Passionate Student. 
                     Loves Physics and Maths as well as Game Development.
                 </p>
                 <div class="social-links">
