Updated About-Me Section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1 class="hero-title">Shaurya Gupta</h1>
                 <h2 class="hero-subtitle">Aerospace Engineering Student @ IIT Madras</h2>
                 <p class="hero-description">
-                    A curious Mind and a Passionate Student. 
+                    A curious Mind and a Passionate Student. <br>
                     Loves Physics and Maths as well as Game Development.
                 </p>
                 <div class="social-links">
@@ -67,28 +67,28 @@
             <div class="about-content">
                 <div class="about-text">
                     <p class="about-paragraph">
-                        I'm a passionate software engineer and product designer with over 8 years of experience 
-                        building scalable web applications and designing intuitive user experiences. My journey 
-                        began with a computer science degree from Stanford University, where I discovered my 
-                        love for both code and design.
+                        I'm a passionate student who hogs on information like a sponge, always eager to learn and grow.
+                        I've always liked physics and logic, but my love has been for mathematics. I enjoy the purity of numbers and the elegance of mathematical proofs.
+                        My journey into the world of technology began with game development, where I learned to combine my love for math with creativity.
+                        Now, I am pursuing a degree in Aerospace Engineering at IIT Madras, where I apply my analytical skills to solve complex engineering problems.
                     </p>
                     <p class="about-paragraph">
-                        Throughout my career, I've had the privilege of working with innovative companies ranging 
-                        from early-stage startups to Fortune 500 enterprises. I specialize in React, Node.js, 
-                        and cloud architecture, while maintaining a strong focus on user-centered design principles.
+                        Throughout my student life, I have been actively involved in various extracurricular activities, including debating and dramatics.
+                        But another passion of mine is teaching. I love sharing knowledge and helping others understand complex concepts.
+                        Whether it's through tutoring my peers or creating educational content, I find joy in making learning accessible to all.
                     </p>
                     <div class="achievements">
                         <div class="achievement-item">
-                            <h4 class="achievement-title">Led cross-functional teams</h4>
-                            <p class="achievement-desc">of 12+ developers and designers</p>
+                            <h4 class="achievement-title">Scholar of the Year</h4>
+                            <p class="achievement-desc">for 7 consecutive years from grade 6 to 12</p>
                         </div>
                         <div class="achievement-item">
-                            <h4 class="achievement-title">Increased user engagement</h4>
-                            <p class="achievement-desc">by 300% through UX improvements</p>
+                            <h4 class="achievement-title">Lead Actor in Multiple School Productions</h4>
+                            <p class="achievement-desc">From Mufasa in Lion King to representing Chattrapati Shivaji Maharaj</p>
                         </div>
                         <div class="achievement-item">
-                            <h4 class="achievement-title">Built and scaled platforms</h4>
-                            <p class="achievement-desc">serving 1M+ active users</p>
+                            <h4 class="achievement-title">Helping peers with passion</h4>
+                            <p class="achievement-desc">Helped underprivileged peers understand complex concepts</p>
                         </div>
                     </div>
                 </div>
