Updated Education Section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                             <h4 class="achievement-title">Helping peers with passion</h4>
                             <p class="achievement-desc">Helped underprivileged peers understand complex concepts</p>
                         </div>
+                        <div class="achievement-item">
+                            <h4 class="achievement-title">Aced Competitive Examinations</h4>
+                            <p class="achievement-desc">Got top rank in JEE Mains, Advanced, BITS and Imperial College London</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -104,33 +108,30 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <h3 class="timeline-title">Master of Science in Computer Science</h3>
-                        <p class="timeline-subtitle">Stanford University • 2016-2018</p>
+                        <h3 class="timeline-title">Btech in Aerospace Engineering</h3>
+                        <p class="timeline-subtitle">IIT Madras • 2024-2028</p>
                         <p class="timeline-description">
-                            Specialized in Machine Learning and Human-Computer Interaction. 
-                            Graduated Summa Cum Laude with a 3.9 GPA.
+                            Year 1 CGPA of 10.
                         </p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <h3 class="timeline-title">AWS Solutions Architect Certification</h3>
-                        <p class="timeline-subtitle">Amazon Web Services • 2020</p>
+                        <h3 class="timeline-title">Grade 12 in Science - CBSE Board</h3>
+                        <p class="timeline-subtitle">The Kalyani School, Pune • 2024</p>
                         <p class="timeline-description">
-                            Professional level certification demonstrating expertise in designing 
-                            distributed systems on AWS.
+                            Scored 98.8% in CBSE Board Exams with a perfect score in English and Physics.                            
                         </p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <h3 class="timeline-title">Tech Innovation Award</h3>
-                        <p class="timeline-subtitle">TechCorp Inc. • 2021</p>
+                        <h3 class="timeline-title">Grade 10 in Science - CBSE Board</h3>
+                        <p class="timeline-subtitle">The Kalyani School, Pune • 2022</p>
                         <p class="timeline-description">
-                            Recognized for developing an AI-powered analytics platform that reduced 
-                            processing time by 75%.
+                            Scored 99.4% in CBSE Board Exams with a perfect score in Mathematics and English.
                         </p>
                     </div>
                 </div>
