--- a/index.html
+++ b/index.html
@@ -228,10 +228,9 @@
                             <path d="M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z"/>
                         </svg>
                     </div>
-                    <h3 class="interest-title">Cybersecurity</h3>
+                    <h3 class="interest-title">Learning</h3>
                     <p class="interest-description">
-                        Passionate about building secure applications and staying updated with the latest 
-                        security practices and vulnerabilities.
+                        Passionate about understanding complex systems and continuous learning in field of Physics and Maths.
                     </p>
                 </div>
                 <div class="interest-card">
@@ -240,10 +239,9 @@
                             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
                         </svg>
                     </div>
-                    <h3 class="interest-title">Open Source</h3>
+                    <h3 class="interest-title">Game Development</h3>
                     <p class="interest-description">
-                        Active contributor to various open-source projects and maintainer of several 
-                        popular npm packages.
+                        New found passion in game development, exploring python where I can combine creativity and logic.
                     </p>
                 </div>
                 <div class="interest-card">
@@ -252,10 +250,10 @@
                             <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
                         </svg>
                     </div>
-                    <h3 class="interest-title">Photography</h3>
+                    <h3 class="interest-title">Teaching</h3>
                     <p class="interest-description">
-                        Enjoy capturing moments through landscape and street photography, which helps 
-                        me see the world from different perspectives.
+                        Passionate about sharing knowledge and helping others learn, particularly in the fields of 
+                        mathematics and physics.
                     </p>
                 </div>
             </div>
