--- a/index.html
+++ b/index.html
@@ -145,47 +145,47 @@
             <h2 class="section-title">Skills & Expertise</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3 class="skill-category-title">Frontend Development</h3>
+                    <h3 class="skill-category-title">Game Development</h3>
                     <div class="skills-list">
                         <div class="skill-item">
-                            <span class="skill-name">React/Next.js</span>
-                            <div class="skill-bar">
-                                <div class="skill-progress" style="width: 95%"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <span class="skill-name">TypeScript</span>
+                            <span class="skill-name">Pygame</span>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 90%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
-                            <span class="skill-name">CSS/Tailwind</span>
+                            <span class="skill-name">Godot</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 88%"></div>
+                                <div class="skill-progress" style="width: 60%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span class="skill-name">Unity</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 50%"></div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3 class="skill-category-title">Backend Development</h3>
+                    <h3 class="skill-category-title">Academics</h3>
                     <div class="skills-list">
                         <div class="skill-item">
-                            <span class="skill-name">Node.js/Express</span>
+                            <span class="skill-name">Mathematics</span>
                             <div class="skill-bar">
-                                <div class="skill-progress" style="width: 92%"></div>
+                                <div class="skill-progress" style="width: 95%"></div>
                             </div>
                         </div>
                         <div class="skill-item">
-                            <span class="skill-name">Python/Django</span>
+                            <span class="skill-name">Physics</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 90%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span class="skill-name">Logical Ability</span>
                             <div class="skill-bar">
                                 <div class="skill-progress" style="width: 85%"></div>
-                            </div>
-                        </div>
-                        <div class="skill-item">
-                            <span class="skill-name">PostgreSQL/MongoDB</span>
-                            <div class="skill-bar">
-                                <div class="skill-progress" style="width: 80%"></div>
                             </div>
                         </div>
                     </div>
